@@ -16,7 +16,6 @@
 package io.micronaut.annotation.processing;
 
 import io.micronaut.core.annotation.Nullable;
-import io.micronaut.core.reflect.ReflectionUtils;
 import io.micronaut.core.util.ArrayUtils;
 import io.micronaut.inject.writer.AbstractClassWriterOutputVisitor;
 import io.micronaut.inject.writer.ClassGenerationException;
@@ -28,14 +27,11 @@ import javax.tools.FileObject;
 import javax.tools.JavaFileObject;
 import javax.tools.StandardLocation;
 import java.io.FileNotFoundException;
-import java.io.FilterOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.Reader;
 import java.io.Writer;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -51,18 +47,6 @@ import java.util.Optional;
  * @since 1.0
  */
 public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutputVisitor {
-
-    private static final Field FILTER_OUTPUT_STREAM_OUT = ReflectionUtils.findField(FilterOutputStream.class, "out")
-        .map(field -> {
-            try {
-                addOpenJavaModules(FilterOutputStream.class, AnnotationProcessingOutputVisitor.class);
-                field.setAccessible(true);
-                return field;
-            } catch (Exception e) {
-                return null;
-            }
-        })
-        .orElse(null);
 
     private final Filer filer;
     private final Map<String, Optional<GeneratedFile>> metaInfFiles = new LinkedHashMap<>();
@@ -81,23 +65,6 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
             this.isGradleFiler = filerName.startsWith("org.gradle.api") || filerName.startsWith("org.jetbrains.kotlin.kapt3");
         } else {
             this.isGradleFiler = false;
-        }
-    }
-
-    //--add-opens=java.base/$hostPackageName=ALL-UNNAMED
-    private static void addOpenJavaModules(Class<?> hostClass, Class<?> targetClass) {
-        // For Java 9 and above
-        try {
-            Method getModule = Class.class.getMethod("getModule");
-            Class<?> module = getModule.getReturnType();
-            Method getPackageName = Class.class.getMethod("getPackageName");
-            Method addOpens = module.getMethod("addOpens", String.class, module);
-            Object hostModule = getModule.invoke(hostClass);
-            String hostPackageName = (String) getPackageName.invoke(hostClass);
-            Object actionModule = getModule.invoke(targetClass);
-            addOpens.invoke(hostModule, hostPackageName, actionModule);
-        } catch (Exception e) {
-            // Ignore
         }
     }
 
@@ -139,8 +106,7 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
             nativeOriginatingElements = new Element[0];
         }
         javaFileObject = filer.createClassFile(classname, nativeOriginatingElements);
-        OutputStream os = javaFileObject.openOutputStream();
-        return unwrapFilterOutputStream(os);
+        return javaFileObject.openOutputStream();
     }
 
     @Override
@@ -160,50 +126,6 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
         } catch (IOException e) {
             throw new ClassGenerationException("Unable to generate Bean entry at path: " + path, e);
         }
-    }
-
-    private OutputStream unwrapFilterOutputStream(OutputStream os) {
-        // https://bugs.openjdk.java.net/browse/JDK-8255729
-        // FilterOutputStream and JavacFiler$FilerOutputStream is always using write(int) and killing performance, unwrap if possible
-        if (FILTER_OUTPUT_STREAM_OUT != null && os instanceof FilterOutputStream) {
-            try {
-                OutputStream osToWrite = (OutputStream) FILTER_OUTPUT_STREAM_OUT.get(os);
-                if (osToWrite == null) {
-                    return os;
-                }
-                return new OutputStream() {
-                    @Override
-                    public void write(int b) throws IOException {
-                        osToWrite.write(b);
-                    }
-
-                    @Override
-                    public void write(byte[] b) throws IOException {
-                        osToWrite.write(b);
-                    }
-
-                    @Override
-                    public void write(byte[] b, int off, int len) throws IOException {
-                        osToWrite.write(b, off, len);
-                    }
-
-                    @Override
-                    public void flush() throws IOException {
-                        osToWrite.flush();
-                    }
-
-                    @Override
-                    public void close() throws IOException {
-                        // Close original output stream
-                        os.close();
-                    }
-                };
-            } catch (Exception e) {
-                // Use original output stream if we cannot unwrap it
-                return os;
-            }
-        }
-        return os;
     }
 
     @Override
